<resources>
    <string name="app_name">Foodora</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="submit">Submit</string>
    <string name="modify_account">Modify Account</string>
    <string name="app_logo_white_purple_transparent">app logo, white purple, transparent</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="foodora">Foodora!</string>
    <string name="search_box_hint">What are you hungry for?</string>

</resources>